  * fix the deadlock with non-seekable input plugins

xine-lib (1-rc3b)
  * fix SDL plugin that was broken in rc3
  * updated libfaad 2.0 RC3 cvs (fix some raw aac problems, HE support)
  * Win32 Cygwin updates, using DirectX
  * new demuxer for Interchange File Format (IFF) supporting IFF-8SVX, IFF-16SV,
    IFF-ILBM, and IFF-ANIM (limited to opt5, opt7 and opt8 at the moment)
  * fixed problem with jumpy visualization especially on ogg files
  * dxr3: fix situation, where the initial menu on some DVDs would have
    the wrong aspect
  * major refinement of post plugin architecture fixes a lot of races
  * fix runtime audio channel selection, specially for ogg/ogm streams
  * preliminary matroska support
  * support for AAC audio in RealMedia files
  * implement chapter skipping in ogm files
  * more RTP/UDP plugin fixes
  * secure http status string parsing, use status in mmsh again
  * fix endianness problem in OSD texts (using UCS-2LE or UCS-2BE encoding)
  * raw AAC fixes and support for 5.1 AAC streams
  * AVI demuxer OpenDML (AVI2.0) support
  * fix unscaled OSD for Kaffeine
  * Sierra VMD file demuxer
  * new ffmpeg decoders activated:
    * Sierra VMD audio and video
    * Duck TrueMotion v1 (DUCK)
    * Planar RGB (8BPS)
    * Lossless Codecs (MSZH & ZLIB)
    * ASV v1/v2
    * ATI VCR1
    * Real Video 2.0
    * Sierra VMD
    * Flash Video
  * new MOD demuxer
  * new, safer method for on-the-fly rewiring of post plugins
  * add iso-8859-9 and iso-8859-15 codepages into xine fonts
  * work around freezing with arts on BSD
  * documentation about xine fonts
  * make the protocol in MMS configurable - TCP, HTTP or autoprobe
  * added video output plugin for Sun PGX32 framebuffers
  * new video out plugin using CACA - Colored ASCII Art
  * fix a crash when using the gnome-vfs plugin with newer gnome-vfs versions
  * new "file" (wave) audio out plugin
    example: XINE_WAVE_OUTPUT=/tmp/file.wav xine -A file music.mp3