@@ -1,4 +1,5 @@
   * fix the deadlock with non-seekable input plugins
+  * guess codeset for OSD if nl_langinfo(CODESET) is missing or not working
 
 xine-lib (1-rc3b)
   * fix SDL plugin that was broken in rc3
